methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: not found: value setCouleurSol
  setCouleurSol(c)
  ^FlowerPot:8: error: not found: value setCouleurSol
  setCouleurSol(c)
  ^