methods.flowerpot.FlowerPot.scala.code
def colorie(c:Color) {
  setCouleurSol(c)
  baisseBrosse()
  leveBrosse()
}

def motifFleur(c:Color) {
  setCouleurSol(c)
  colorie(c)
  avance()
  colorie(Color.yellow)
  gauche()
  avance()
  colorie(c)
  recule(2)
  colorie(c)
  avance()
  droite()
  avance()
  colorie(c)
  
}